# multilspy

./: CLAUDE.md  MCP_RUNNER_README.md  lsp.toml.example  pyproject.toml  setup.py
src/multilspy/: language_server.py  multilspy_config.py  multilspy_types.py  multilspy_utils.py  run_java.py
src/multilspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/multilspy/language_servers/eclipse_jdtls/: eclipse_jdtls.py  initialize_params.json  runtime_dependencies.json
src/multilspy/lsp_protocol_handler/: server.py
src/multilspy/mcp/: mcp_runner.py
src/multilspy/runtime_dependency_config/: __init__.py  config_manager.py
src/multilspy/runtime_dependency_downloader/: __init__.py  downloader.py
src/multilspy/runtime_dependency_models/: __init__.py  initialize_params.py  runtime_dependencies.py
tests/multilspy/: test_eclipse_jdtls_version_overrides.py  test_runtime_dependency_models.py
