[project]
name = "multilspy"
version = "0.0.15"
authors = [
    { name = "Lakshya A Agrawal", email = "lakshya.aagrawal@gmail.com" },
]
description = "A language-agnostic LSP client in Python, with a library interface. Intended to be used to build applications around language servers. Currently multilspy supports language servers for Python, Rust, Java, Go, JavaScript, Ruby, C# and Dart. Originally appeared as part of Monitor-Guided Decoding (https://github.com/microsoft/monitors4codegen)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Programming Language :: C#",
    "Programming Language :: Java",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: JavaScript",
    "Programming Language :: Go",
    "Programming Language :: Ruby",
]

dependencies = [
    "jedi-language-server==0.41.3",
    "requests==2.32.3",
    "typing-extensions>=4.2.0",
    "psutil (>=7.0.0,<8.0.0)",
    "setuptools==68.0.0",
    "fastmcp>=0.1.0",
    "pytest==8.4.2",
    "pytest-asyncio==0.26.0"
]

[project.urls]
"Homepage" = "https://github.com/microsoft/multilspy"
"Bug Tracker" = "https://github.com/microsoft/multilspy/issues"
